# dicom-codecs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
include/dicomcodecs/: codec.hpp  decoder.hpp  encoder.hpp  exception.hpp  image.hpp  point.hpp  size.hpp  types.hpp
lib/gdcm16/: CMakeLists.txt  decoder.cpp  encoder.cpp  jdatadst.c  jpegcmake.h  jpeglib.h
lib/ijg12/: CMakeLists.txt  decoder.cpp  encoder.cpp  jconfig.h  mangle.h
lib/kakadu/: CMakeLists.txt  decoder.cpp  encoder.cpp
lib/libjpeg/: CMakeLists.txt
lib/libjpeg-turbo8/: CMakeLists.txt  decoder.cpp  encoder.cpp
lib/ljpeg-6b/: CMakeLists.txt  decoder.cpp  encoder.cpp  jpeglib.h  mangle.h
lib/ljpeg-6b16/: CMakeLists.txt  decoder.cpp  encoder.cpp  jconfig.h  jdatadst.c  jmemsrc.c
lib/openjpeg/: CMakeLists.txt  opj_config_private.h
lib/openjph/: CMakeLists.txt  decoder.cpp  encodedBuffer.hpp  encoder.cpp
src/: CMakeLists.txt  charlsdecoder.cpp  lib.cpp  openjpegbuffer.hpp  openjpegdecoder.cpp
src/charls/: decoder.cpp  encoder.cpp
src/ijg/: CMakeLists.txt  lib.cpp  lib.hpp
src/ijg12/: decoder.cpp  encoder.cpp
src/libjpeg-turbo/: decoder.cpp  encoder.cpp
src/openjpeg/: buffer.cpp  buffer.hpp  decoder.cpp  encoder.cpp
src/rle/: decoder.cpp  encoder.cpp
tests/: CMakeLists.txt  benchmark.cpp  main.cpp  makeRawFileName.cpp  makeRawImages.cpp  printImage.cpp  readFile.cpp  readFileAndDecode.cpp  readFileAndRoundTrip.cpp  readRawFile.cpp  readRawFileAndRoundTrip.cpp  roundTrip.cpp  timer.hpp  writeFile.cpp
